syntax = "proto3";
package proto;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message ReservationProtoObj
{
  int32 id = 1;
  int32 carId = 2;
  int32 userId = 3;
  google.protobuf.Timestamp startDate = 4;
  google.protobuf.Timestamp endDate = 5;
  double totalPrice = 6;
}

service ReservationProtoService
{
  rpc CreateReservation(ReservationProtoObj) returns (ReservationProtoObj);
}
